fix blur on firefox

--- a/src/components/movie.css
+++ b/src/components/movie.css
@@ -1,17 +1,19 @@
-
 .movie-card {
     position: relative;
     cursor: pointer;
 }
 
-.my-shadow {
+.custom-shadow {
     box-shadow: 0 20px 40px 0px black;
 }
 
 .info {
     pointer-events: none;
-    /* opacity: 0; */
     display: none;
+    /* opacity: 0; */
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
     top: 0;
     left: 0%;
@@ -19,56 +21,86 @@
     width: 100%;
     color: rgb(180, 210, 255);
 }
-div.imgFondo {
-    /* background-color: darkblue; */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.info div.imgFondo {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    /* width: 100%; */
+    filter: brightness(0.4);
+    /* border: 1px black solid; */
     overflow: hidden;
 }
-.blur {
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(10px);
-    padding: 1.5rem;
+
+.info img.imgFondo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1.1);
 }
+
+/* .info .content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+} */
+
+.blur {
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    filter: blur(3px);
+}
+
 .blur-sm {
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(1px);
 }
+
 .info h5 {
     font-size: 1rem;
     overflow: hidden;
     text-overflow: ellipsis;
     /* white-space: pre-line; */
     display: -webkit-box;
-   -webkit-line-clamp: 2; /* number of lines to show */
-           line-clamp: 2; 
-   -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
+
 .info p.overview {
     font-size: smaller;
     line-height: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-   -webkit-line-clamp: 8; /* number of lines to show */
-           line-clamp: 2; 
-   -webkit-box-orient: vertical;
+    -webkit-line-clamp: 8;
+    /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .visible-area {
-    
+
     min-height: 13rem;
     transition: .2s;
 }
+
 .visible-area img {
     object-fit: cover;
 }
+
 .visible-area .spinner-wrapper {
     position: absolute;
     top: 0;
     left: 0;
 }
+
 /* .visible-area .spinner {} */
 
 .yearOnImage {
@@ -80,9 +112,11 @@ div.imgFondo {
 .movie-card:hover {
     z-index: 2;
 }
+
 .movie-card:hover .visible-area {
     transform: scale(1.1);
 }
+
 .movie-card:hover .info {
     /* opacity: 1; */
     display: flex;
@@ -94,6 +128,7 @@ div.imgFondo {
         left: 0;
         width: 100%;
     }
+
     .blur {
         padding: 0.8rem;
     }
